moved nautilus stuff to its packaged